// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders childByIdQuery occurrence snapshot correctly 1`] = `
<div>
  <div
    class="row"
  >
    <div
      class="label fullWidth"
    >
      <svg
        class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <path
            d="M0 0h24v24H0z"
          />
          <path
            d="M11.967 1.5c2.06 0 4.12.778 5.69 2.334 3.143 3.111 2.93 7.96 0 11.268l-.622.709c-2.612 2.991-4.066 4.96-5.068 6.937-1.073-2.13-2.682-4.249-5.689-7.646-2.93-3.308-3.143-8.157 0-11.268A8.06 8.06 0 0111.967 1.5zm.032 2a6.072 6.072 0 00-4.3 1.762A5.606 5.606 0 006.002 9.41c.02 1.573.648 3.134 1.766 4.398l.66.752c1.59 1.823 2.717 3.239 3.573 4.503.975-1.437 2.292-3.063 4.233-5.255 1.118-1.264 1.746-2.825 1.766-4.398a5.616 5.616 0 00-1.698-4.15A6.077 6.077 0 0011.999 3.5zM12 6a3.5 3.5 0 110 6.999A3.5 3.5 0 0112 6zm0 2c-.827 0-1.5.673-1.5 1.5S11.173 11 12 11s1.5-.673 1.5-1.5S12.827 8 12 8z"
            fill="currentColor"
          />
        </g>
      </svg>
      <div>
        <p
          class="text body label"
        >
          Musiikkitalo
        </p>
        <p
          class="text body description"
        >
          Urho Kekkosen katu 12
        </p>
      </div>
    </div>
    <div
      class="label"
    >
      <svg
        class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <path
            d="M0 0h24v24H0z"
          />
          <path
            d="M17 2a1 1 0 011 1v1h4v17H2V4h4V3a1 1 0 112 0v1h8V3a1 1 0 011-1zm3 9H4v8h16v-8zm0-5H4v3h16V6z"
            fill="currentColor"
          />
        </g>
      </svg>
      <div>
        <p
          class="text body label"
        >
          8.3.2020
        </p>
      </div>
    </div>
    <div
      class="label"
    >
      <svg
        class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <path
            d="M0 0h24v24H0z"
          />
          <path
            d="M12 2c5.523 0 10 4.477 10 10s-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2zm0 2a8 8 0 100 16 8 8 0 000-16zm1 2v5.584l3.243 3.244-1.415 1.415-3.535-3.536.002-.001-.294-.292L11 6h2z"
            fill="currentColor"
          />
        </g>
      </svg>
      <div>
        <p
          class="text body label"
        >
          04:00 - 04:12
        </p>
      </div>
    </div>
    <div
      class="label"
    >
      <svg
        class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <path
            d="M0 0h24v24H0z"
          />
          <path
            d="M14.5 16a3.5 3.5 0 013.498 3.38l.002.12V22h-2v-2.5a1.5 1.5 0 00-1.412-1.497L14.5 18h-5a1.5 1.5 0 00-1.497 1.412L8 19.5V22H6v-2.5a3.5 3.5 0 013.38-3.498L9.5 16h5zm2.4-6.001l3.6.001.12.002a3.5 3.5 0 013.375 3.31L24 13.5V16h-2v-2.5l-.003-.088a1.5 1.5 0 00-1.358-1.406L20.5 12l-3.6.001a5.023 5.023 0 000-2.002zm-9.8 0A5.023 5.023 0 007.1 12L3.5 12a1.5 1.5 0 00-1.497 1.412L2 13.5V16H0v-2.5a3.5 3.5 0 013.38-3.498L3.5 10l3.6-.001zM12 7a4 4 0 110 8 4 4 0 010-8zm0 2a2 2 0 100 4 2 2 0 000-4zM5.5 2a3.5 3.5 0 110 7 3.5 3.5 0 010-7zm13 0a3.5 3.5 0 110 7 3.5 3.5 0 010-7zm-13 2a1.5 1.5 0 100 3 1.5 1.5 0 000-3zm13 0a1.5 1.5 0 100 3 1.5 1.5 0 000-3z"
            fill="currentColor"
          />
        </g>
      </svg>
      <div>
        <p
          class="text body label"
        >
          Perhe
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders occurrence snapshot correctly 1`] = `
<div>
  <div
    class="row"
  >
    <div
      class="label fullWidth"
    >
      <svg
        class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <path
            d="M0 0h24v24H0z"
          />
          <path
            d="M11.967 1.5c2.06 0 4.12.778 5.69 2.334 3.143 3.111 2.93 7.96 0 11.268l-.622.709c-2.612 2.991-4.066 4.96-5.068 6.937-1.073-2.13-2.682-4.249-5.689-7.646-2.93-3.308-3.143-8.157 0-11.268A8.06 8.06 0 0111.967 1.5zm.032 2a6.072 6.072 0 00-4.3 1.762A5.606 5.606 0 006.002 9.41c.02 1.573.648 3.134 1.766 4.398l.66.752c1.59 1.823 2.717 3.239 3.573 4.503.975-1.437 2.292-3.063 4.233-5.255 1.118-1.264 1.746-2.825 1.766-4.398a5.616 5.616 0 00-1.698-4.15A6.077 6.077 0 0011.999 3.5zM12 6a3.5 3.5 0 110 6.999A3.5 3.5 0 0112 6zm0 2c-.827 0-1.5.673-1.5 1.5S11.173 11 12 11s1.5-.673 1.5-1.5S12.827 8 12 8z"
            fill="currentColor"
          />
        </g>
      </svg>
      <div>
        <p
          class="text body label"
        >
          Musiikkitalo
        </p>
      </div>
    </div>
    <div
      class="label"
    >
      <svg
        class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <path
            d="M0 0h24v24H0z"
          />
          <path
            d="M17 2a1 1 0 011 1v1h4v17H2V4h4V3a1 1 0 112 0v1h8V3a1 1 0 011-1zm3 9H4v8h16v-8zm0-5H4v3h16V6z"
            fill="currentColor"
          />
        </g>
      </svg>
      <div>
        <p
          class="text body label"
        >
          8.3.2020
        </p>
      </div>
    </div>
    <div
      class="label"
    >
      <svg
        class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <path
            d="M0 0h24v24H0z"
          />
          <path
            d="M12 2c5.523 0 10 4.477 10 10s-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2zm0 2a8 8 0 100 16 8 8 0 000-16zm1 2v5.584l3.243 3.244-1.415 1.415-3.535-3.536.002-.001-.294-.292L11 6h2z"
            fill="currentColor"
          />
        </g>
      </svg>
      <div>
        <p
          class="text body label"
        >
          04:00 - 04:12
        </p>
      </div>
    </div>
    <div
      class="label"
    >
      <svg
        class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <path
            d="M0 0h24v24H0z"
          />
          <path
            d="M14.5 16a3.5 3.5 0 013.498 3.38l.002.12V22h-2v-2.5a1.5 1.5 0 00-1.412-1.497L14.5 18h-5a1.5 1.5 0 00-1.497 1.412L8 19.5V22H6v-2.5a3.5 3.5 0 013.38-3.498L9.5 16h5zm2.4-6.001l3.6.001.12.002a3.5 3.5 0 013.375 3.31L24 13.5V16h-2v-2.5l-.003-.088a1.5 1.5 0 00-1.358-1.406L20.5 12l-3.6.001a5.023 5.023 0 000-2.002zm-9.8 0A5.023 5.023 0 007.1 12L3.5 12a1.5 1.5 0 00-1.497 1.412L2 13.5V16H0v-2.5a3.5 3.5 0 013.38-3.498L3.5 10l3.6-.001zM12 7a4 4 0 110 8 4 4 0 010-8zm0 2a2 2 0 100 4 2 2 0 000-4zM5.5 2a3.5 3.5 0 110 7 3.5 3.5 0 010-7zm13 0a3.5 3.5 0 110 7 3.5 3.5 0 010-7zm-13 2a1.5 1.5 0 100 3 1.5 1.5 0 000-3zm13 0a1.5 1.5 0 100 3 1.5 1.5 0 000-3z"
            fill="currentColor"
          />
        </g>
      </svg>
      <div>
        <p
          class="text body label"
        >
          Perhe
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders snapshot correctly 1`] = `
<div>
  <div
    class="heroWrapper"
    style="background-image: url(a);"
    title="b"
  >
    <div
      class="backButtonWrapper"
    >
      <div
        class="backButtonInnerWrapper"
      >
        <a
          aria-label="Palaa"
          class="backButton"
          href="/back-to"
        >
          <div
            class="imgWrapper backButtonIcon"
          >
            <img
              alt=""
              src="arrowLeft.svg"
            />
          </div>
        </a>
      </div>
    </div>
  </div>
  <div
    class="pageWrapper wrapper"
  >
    <div
      class="container"
    >
      <div
        class="eventWrapper"
        role="main"
      >
        <div
          class="event"
        >
          <div
            class="heading"
          >
            <h1>
              event name
            </h1>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
